[Feat] 실습 한 번 전부 실행

--- a/02.By클래스사용법.ipynb
+++ b/02.By클래스사용법.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,20 +18,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "태그 이름: div\n",
+      "텍스트: Example Link\n",
+      "First paragraph\n",
+      "Second paragraph\n",
+      "HTML: \n",
+      "        <a href=\"https://example.com\" class=\"link\" name=\"exampleLink\">\n",
+      "            <span>Example Link</span>\n",
+      "        </a>\n",
+      "        <div class=\"content\">\n",
+      "            <p class=\"text\">First paragraph</p>\n",
+      "            <p class=\"text\">Second paragraph</p>\n",
+      "        </div>\n",
+      "    \n",
+      "클래스: \n",
+      "ID: main\n",
+      "크기: {'height': 102, 'width': 1691}\n",
+      "위치: {'x': 8, 'y': 8}\n"
+     ]
+    }
+   ],
    "source": [
     "# By.ID로 요소 찾기\n",
     "element_by_id = driver.find_element(By.ID, 'main')\n",
-    "print(\"Element by ID:\", element_by_id.tag_name)\n"
+    "print(\"태그 이름:\", element_by_id.tag_name)\n",
+    "print(\"텍스트:\", element_by_id.text)\n",
+    "print(\"HTML:\", element_by_id.get_attribute('innerHTML'))\n",
+    "print(\"클래스:\", element_by_id.get_attribute('class'))\n",
+    "print(\"ID:\", element_by_id.get_attribute('id'))\n",
+    "print(\"크기:\", element_by_id.size)\n",
+    "print(\"위치:\", element_by_id.location)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elemenelement_by_name = driver.find_element(By.NAME, 'exampleLink')t by Name: https://example.com/\n"
+     ]
+    }
+   ],
    "source": [
     "# By.NAME으로 요소 찾기\n",
     "element_by_name = driver.find_element(By.NAME, 'exampleLink')\n",
@@ -40,9 +78,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element by Class Name: div\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# By.CLASS_NAME으로 요소 찾기\n",
@@ -52,9 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element by Tag Name: First paragraph\n"
+     ]
+    }
+   ],
    "source": [
     "# By.TAG_NAME으로 요소 찾기\n",
     "element_by_tag_name = driver.find_element(By.TAG_NAME, 'p')\n",
@@ -63,9 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element by Link Text: https://example.com/\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# By.LINK_TEXT로 요소 찾기\n",
@@ -75,9 +137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element by Partial Link Text: https://example.com/\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# By.PARTIAL_LINK_TEXT로 요소 찾기\n",
@@ -87,9 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element by XPath: div\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# By.XPATH로 요소 찾기\n",
@@ -99,9 +177,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Element by CSS Selector: First paragraph\n",
+      "Element by CSS Selector: Second paragraph\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# By.CSS_SELECTOR로 요소 찾기\n",
@@ -122,7 +209,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "crawling",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
